yeah, i should commit more